test/reusable/error/gen_dive1.bfr
main { x: cell; } [
  $dive x [
    $alloc { y: cell; } in
    + y
  ]
]